kong+konga/apps/public-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-site-ingress
  namespace: lab-app
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: rate-limit
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /site
            pathType: Prefix
            backend:
              service:
                name: public-site-service
                port:
                  number: 80
          - path: /portal
            pathType: Prefix
            backend:
              service:
                name: public-site-service
                port:
                  number: 80
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: public-site-service
                port:
                  number: 80
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: public-site-service
                port:
                  number: 80
